--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+<div class="container" style= "background-image: url(./assets/images/nav-bg.png)">
+    <div class="top-footer">
+        
+        <div class="top-footer-left">
+            <img src="./assets/images/logo.png" alt="logo-footer" class="footer-logo">
+            <a href="https://twitter.com/IronMaiden"><img src="./assets/images/twitter.svg" alt="twitter"></a>
+            <a href="https://www.facebook.com/ironmaiden"><img src="./assets/images/facebook.svg" alt="facebook"></a>
+            <a href="https://www.youtube.com/user/ironmaiden"><img src="./assets/images/youtube.svg" alt="youtube"></a>
+            <a href="https://www.instagram.com/ironmaiden/"><img src="./assets/images/instagram1.svg" alt="instagram"></a>
+            <a href="https://open.spotify.com/artist/6mdiAmATAx73kdxrNrnlao"><img src="./assets/images/spotify.svg" alt="spotify"></a>
+            <a href="https://www.ironmaiden.com/mailing-list"><img src="./assets/images/mail.svg" alt="mailing-list"></a>
+        </div>
+        
+       <div class="top-footer-right">
+           <span>Privacy Policy</span>
+           <span>Cookies</span>
+       </div>
+    </div>
+    <div class="bottom-footer">
+        <p>© 2022 - Iron Maiden - Website Designed & Developed by Keane Creative Ltd.</p>
+    </div>
+</div>
