--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<div class="container" style= "background-image: url(./assets/images/nav-bg.png)">
+    <img src="./assets/images/logo.png" alt="logo-image">
+</div>
