nav bar completed (need links) + band page + updated footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,6 +13,7 @@
         
        <div class="top-footer-right">
            <span>Privacy Policy</span>
+           <span>⋙</span>
            <span>Cookies</span>
        </div>
     </div>
