--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,600;0,700;1,300&display=swap');
 body{
     margin: 0px;
     padding: 0px;
+    background-image: url("./assets/images/background.gif");
+    font-family: 'Montserrat', sans-serif;
 }
