--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <app-nav-bar></app-nav-bar>
-<app-the-band></app-the-band>
+<app-welcome></app-welcome>
 <app-footer></app-footer>
