--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div class="container"> 
-
-    <h1>Iron Maiden</h1>
-    <img src="" alt="">
-
+    <app-sect class="sect"></app-sect>
+    <app-latest class="latest"></app-latest>
+    <app-new-album class="new-album"></app-new-album>
+    <app-new-button class="new-button"></app-new-button>
 </div>
