media page updated - to do media quesries

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,7 @@
 .container{
     background-repeat: no-repeat;
     background-size: cover;
+    background-blend-mode: lighten;
     color: white;  
     margin-top: 20px;  
 }
