--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <app-nav-bar></app-nav-bar>
-<app-tours></app-tours>
+<app-media></app-media>
 <app-footer></app-footer>
 
