--- a/src/app/components/welcome/sub-comp/new-button/new-button.component.html
+++ b/src/app/components/welcome/sub-comp/new-button/new-button.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-    <a href="">NEW ALBUM OUT NOW</a>
+    <div class="subcontainer">
+        <a href="">NEW ALBUM OUT NOW</a>
+    </div>
 </div>
