--- a/src/app/components/welcome/sub-comp/sect/sect.component.html
+++ b/src/app/components/welcome/sub-comp/sect/sect.component.html
@@ -5,7 +5,7 @@
             <div class="info-card">
                 <h1>THE NUMBER OF THE BEAST</h1>
                 <h2>40TH ANNIVERSARY CASSETTE</h2>
-                <a href="">Our Story</a>
+                <a href="/theband">Our Story</a>
             </div>
         </div>
         <div class="empty"></div>
