--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <nav class="nav-container">
-        <a class="nav-link" href="">Home</a>
-        <a class="nav-link" href="">The Band</a>
-        <a class="nav-link" href="">Tour</a>
-        <a class="nav-link" href="">Media</a>
+        <a class="nav-link" href="/home">Home</a>
+        <a class="nav-link" href="/theband">The Band</a>
+        <a class="nav-link" href="/tours">Tour</a>
+        <a class="nav-link" href="/media">Media</a>
     </nav>
 </div>
