--- a/src/app/components/welcome/sub-comp/new-album/new-album.component.scss
+++ b/src/app/components/welcome/sub-comp/new-album/new-album.component.scss
@@ -11,3 +11,15 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@media (max-width: 600px) {
+
+    .container img{
+        display: block;
+        width: 90%;
+        padding-top: 100px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
