--- a/src/app/components/welcome/sub-comp/new-button/new-button.component.scss
+++ b/src/app/components/welcome/sub-comp/new-button/new-button.component.scss
@@ -2,7 +2,13 @@
     text-align: center;
     width: 100%;
     height: 100%;
-    background-color: darkred;
+}
+
+.subcontainer{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(139, 0, 0, 0.527);
 }
 
 .container a{
@@ -13,4 +19,20 @@
     font-size: x-large;
     display: inline-block;
     margin-top: 6%;
+}
+
+.container a:hover{
+    background-color: rgb(121, 9, 9);
+}
+
+@media (max-width: 600px) {
+    .container a{
+        background-color: rgb(165, 14, 14);
+        color: white;
+        text-decoration: none;
+        padding:30px;
+        font-size: x-large;
+        display: inline-block;
+        margin-top: 17%;
+    }
 }
