--- a/src/app/components/welcome/sub-comp/sect/sect.component.scss
+++ b/src/app/components/welcome/sub-comp/sect/sect.component.scss
@@ -53,3 +53,58 @@
 .empty{
     grid-area: empty;
 }
+
+@media (max-width: 600px) {
+    .sect{
+        width: 100%;
+        height: 100%;
+        grid-area: sector;
+        display: grid;
+        grid-template-columns: 1fr, 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: "info empty";
+    }
+
+    .info-card{
+        position: relative;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        background-color: rgba(255, 255, 255, 0.541);
+    }
+
+    .sect img{
+        width: 429px;
+        height: 273px;
+        position: absolute;
+    }
+
+    .info-card h1{
+        color: red;
+        padding-top: 20px;
+        margin-left: 30px;
+        margin-top: 0px;
+    }
+
+    .info-card h2{
+        color: red;
+        padding-top: 10px;
+        margin-left: 30px;
+    }
+
+    .info-card a{
+        background-color: red;
+        color: white;
+        text-decoration: none;
+        padding: 10px;
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 380px) {
+    .sect img{
+        width: 429px;
+        height: 240px;
+        position: absolute;
+    }
+}
