--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -22,3 +22,27 @@
 .new-button{
     grid-area: newAButton;
 }
+
+@media (max-width: 1000px) {
+    .container{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1.9fr 5.5fr 1.4fr;
+        grid-template-areas: "latest"
+                    "sector"
+                    "newAlbum"
+                    "newAButton";
+    }
+}
+
+@media (max-width: 600px) {
+    .container{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 4fr 8.5fr 3.5fr;
+        grid-template-areas: "latest"
+                    "sector"
+                    "newAlbum"
+                    "newAButton";
+    }
+}
