--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,12 +3,14 @@
         
         <div class="top-footer-left">
             <img src="./assets/images/logo.png" alt="logo-footer" class="footer-logo">
+            <div class="link-container">
             <a href="https://twitter.com/IronMaiden"><img src="./assets/images/twitter.svg" alt="twitter"></a>
             <a href="https://www.facebook.com/ironmaiden"><img src="./assets/images/facebook.svg" alt="facebook"></a>
             <a href="https://www.youtube.com/user/ironmaiden"><img src="./assets/images/youtube.svg" alt="youtube"></a>
             <a href="https://www.instagram.com/ironmaiden/"><img src="./assets/images/instagram1.svg" alt="instagram"></a>
             <a href="https://open.spotify.com/artist/6mdiAmATAx73kdxrNrnlao"><img src="./assets/images/spotify.svg" alt="spotify"></a>
             <a href="https://www.ironmaiden.com/mailing-list"><img src="./assets/images/mail.svg" alt="mailing-list"></a>
+            </div>
         </div>
         
        <div class="top-footer-right">
