--- a/src/app/components/tours/tours.component.html
+++ b/src/app/components/tours/tours.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="img-container">
+        <img src="./assets/images/legacy.jpg" alt="">
+    </div>
     <h1>Legacy Of The Beast World Tour - 2022</h1>
     <h2>May</h2>
     <app-tour-element *ngFor="let tour of tourListMay" [tour] = "tour"></app-tour-element>
