--- a/src/app/components/the-band/the-band.component.scss
+++ b/src/app/components/the-band/the-band.component.scss
@@ -1,5 +1,6 @@
 .container{
     color: white;
+    margin-bottom: 100px;
 }
 
 .band-title{
@@ -25,4 +26,14 @@
 .image2{
     float: right;
     margin: 10px 20px 20px 20px;
+}
+
+@media (max-width: 600px) {
+    .image1{
+        width: 90%;
+    }
+    
+    .image2{
+        width: 90%;
+    }
 }
