--- a/src/app/components/tours/sub-comp/tour-element/tour-element.component.scss
+++ b/src/app/components/tours/sub-comp/tour-element/tour-element.component.scss
@@ -1,5 +1,5 @@
 .container{
-    width: 70%;
+    width: 80%;
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -16,5 +16,6 @@
 
 .container span{
     width: 180px;
+    padding: 5px;
     text-align: center;
 }
