--- a/src/app/components/tours/tours.component.scss
+++ b/src/app/components/tours/tours.component.scss
@@ -7,3 +7,12 @@ h2{
     margin-left: 10%;
     color: white;
 }
+
+.img-container{
+    height: 20%;
+}
+
+.img-container img{
+    width: 100%;
+    height: 100%;
+}
