--- a/src/app/components/welcome/sub-comp/new-album/new-album.component.scss
+++ b/src/app/components/welcome/sub-comp/new-album/new-album.component.scss
@@ -12,14 +12,21 @@
     margin-right: auto;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 920px) {
 
     .container img{
         display: block;
         width: 90%;
-        padding-top: 100px;
+        padding-top: 150px;
         position: relative;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .container img{
+        padding-top: 100px;
     }
 }
