--- a/src/app/components/welcome/sub-comp/new-button/new-button.component.scss
+++ b/src/app/components/welcome/sub-comp/new-button/new-button.component.scss
@@ -25,7 +25,7 @@
     background-color: rgb(121, 9, 9);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 920px) {
     .container a{
         background-color: rgb(165, 14, 14);
         color: white;
@@ -33,6 +33,12 @@
         padding:30px;
         font-size: x-large;
         display: inline-block;
+        margin-top: 11%;
+    }
+}
+
+@media (max-width: 600px) {
+    .container a{
         margin-top: 17%;
     }
 }
