--- a/src/app/components/welcome/sub-comp/sect/sect.component.scss
+++ b/src/app/components/welcome/sub-comp/sect/sect.component.scss
@@ -54,28 +54,32 @@
     grid-area: empty;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 920px) {
     .sect{
         width: 100%;
         height: 100%;
         grid-area: sector;
         display: grid;
-        grid-template-columns: 1fr, 1fr;
+        grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-        grid-template-areas: "info empty";
+        grid-template-areas: "info";
     }
 
     .info-card{
         position: relative;
-        height: 100%;
-        width: 100%;
+        height: 400px;
+        width: 920px;
         margin: 0;
         background-color: rgba(255, 255, 255, 0.541);
     }
 
+    .empty{
+        display: none;
+    }
+
     .sect img{
-        width: 429px;
-        height: 273px;
+        width: 920px;
+        height: 400px;
         position: absolute;
     }
 
@@ -101,9 +105,48 @@
     }
 }
 
+@media (max-width: 600px) {
+
+    .info-card{
+        position: relative;
+        height: 400px;
+        width: 600px;
+        margin: 0;
+        background-color: rgba(255, 255, 255, 0.541);
+    }
+
+    .empty{
+        display: none;
+    }
+
+    .sect img{
+        width: 600px;
+        height: 400px;
+        position: absolute;
+    }
+
+}
+
+
+@media (max-width: 440px) {
+    .info-card{
+        position: relative;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        background-color: rgba(255, 255, 255, 0.541);
+    }
+
+    .sect img{
+        width: 100%;
+        height: 273px;
+        position: absolute;
+    }
+}
+
 @media (max-width: 380px) {
     .sect img{
-        width: 429px;
+        width: 100%;
         height: 240px;
         position: absolute;
     }
