--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -46,3 +46,9 @@
                     "newAButton";
     }
 }
+
+@media (max-width: 440px) {
+    .container{
+        overflow-x: hidden;
+    }
+}
