last media update

--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -1,3 +1,4 @@
+<img class="img-media" src="./assets/images/banner-media.jpeg" alt="media-tour">
 <div class="container">
     <div class="inner-container">
         <div class="iframe-container">
