--- a/src/app/components/media/media.component.scss
+++ b/src/app/components/media/media.component.scss
@@ -4,6 +4,11 @@
     margin-bottom: 60px;
 }
 
+.img-media{
+    height: 20%;
+    width: 100%;
+}
+
 .inner-container{
     display: flex;
     flex-direction: row;
@@ -25,18 +30,49 @@ p{
     color: red;
 }
 
-@media (max-width: 600px) {
+@media (max-width:480px){
     .inner-container{
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .iframe-container iframe{
-        width: 360px;
-        margin-left: auto;
-        margin-right: auto;
+        width: 200px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 600px) {
+    .inner-container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .iframe-container iframe{
+        width: 320px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     .container{
         margin: 0px
     }
 }
+
+@media (max-width: 1020px) {
+    .inner-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .iframe-container iframe{
+        width: 750px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
+
