--- a/src/app/components/media/media.component.scss
+++ b/src/app/components/media/media.component.scss
@@ -38,7 +38,8 @@ p{
     }
 
     .iframe-container iframe{
-        width: 200px;
+        align-self: center;
+        max-width: 300px;
         margin-left: 20px;
         margin-right: 20px;
     }
@@ -52,7 +53,8 @@ p{
     }
 
     .iframe-container iframe{
-        width: 320px;
+        max-width: 300px;
+        align-self: center;
         margin-left: 20px;
         margin-right: 20px;
     }
