--- a/src/app/components/welcome/sub-comp/sect/sect.component.scss
+++ b/src/app/components/welcome/sub-comp/sect/sect.component.scss
@@ -1,57 +1,69 @@
-.container{
-    width: 100%;
-    height: 100%;
-}
-.sect{
-    grid-area: sector;
-    display: grid;
-    grid-template-columns: 1fr, 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "info empty";
+@media (max-width: 2200px) {
+
+    .container{
+        width: 100%;
+        height: 100%;
+    }
+    .sect{
+        grid-area: sector;
+        display: grid;
+        grid-template-columns: 1fr, 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: "info empty";
+    }
+    
+    .sect img{
+        margin-left: 20px;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .info-card{
+        position: absolute;
+        margin-left: 200px;
+        margin-right: 200px;
+        margin-top: 20px;
+        margin-bottom: 20%;
+        height: 250px;
+        width: 600px;
+        background-color: rgba(255, 255, 255, 0.541);
+    }
+    
+    .info-card h1{
+        color: red;
+        padding-top: 20px;
+        margin-left: 30px;
+    }
+    
+    .info-card h2{
+        color: red;
+        padding-top: 10px;
+        margin-left: 30px;
+    }
+    
+    .info-card a{
+        background-color: red;
+        color: white;
+        text-decoration: none;
+        padding: 10px;
+        margin-left: 30px;
+    }
+    
+    .infos{
+        grid-area: info;
+    }
+    
+    .empty{
+        grid-area: empty;
+    }
+
 }
 
-.sect img{
-    width: 100%;
-    height: 100%;
-}
 
-.info-card{
-    position: absolute;
-    margin-left: 200px;
-    margin-right: 200px;
-    margin-top: 20px;
-    margin-bottom: 20%;
-    height: 250px;
-    width: 600px;
-    background-color: rgba(255, 255, 255, 0.541);
-}
-
-.info-card h1{
-    color: red;
-    padding-top: 20px;
-    margin-left: 30px;
-}
-
-.info-card h2{
-    color: red;
-    padding-top: 10px;
-    margin-left: 30px;
-}
-
-.info-card a{
-    background-color: red;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    margin-left: 30px;
-}
-
-.infos{
-    grid-area: info;
-}
-
-.empty{
-    grid-area: empty;
+@media (max-width: 1900px) {
+    .sect img{
+        margin-left: 0px;
+    }
 }
 
 @media (max-width: 920px) {
